--- a/sem3front_end/package.json
+++ b/sem3front_end/package.json
@@ -8,7 +8,8 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-star-ratings": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
