--- a/sem3front_end/package.json
+++ b/sem3front_end/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.1.1",
+    "react-datepicker": "^0.61.0",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
