--- a/sem3front_end/package.json
+++ b/sem3front_end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.19.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
